- Fixed teleport using a skill not working on Athena servers (bug #17).
- Fixed command 'i neq' (show unequipped items) not working.
- The portalsLOS.txt entry for gef_dun00 -> gef_dun01 is fixed. This means
  Kore can correctly walk from gef_dun00 to gef_dun01 again.
- Advanced 2-2 classes are now correctly identified.
- Fixed a bug which caused portalsLOS.txt to be generated incorrectly.

New config options:
- teleportAuto_unstuck - teleport when stuck.

==================
### 1.3.3 (beta)
==================

Bug fixes:
- Fixed useSelf_skill. It didn't work in the previous beta because of a typo.
- Fixed party skills; they weren't working because of typos.
- Fixed shopAuto_open flooding console with "A shop has already been opened.".
- Fixed route AI not decreasing step size when stuck

New features:
- 'al', 'testshop' and 'openshop' commands now display the shop title


==================
### 1.3.2 (beta)
==================

NOTES:
- Because of a routing bugfix, portalsLOS.txt will need an update. It's
  recommended that you do one of the following things:
  * Download the latest tablepack, and extract portalsLOS.txt into your
    tables folder.
  - OR -
  * Delete your portalsLOS.txt and let Kore recompile it.
- Shop.txt format has changed! See below.
- Syntax of the console command "conf" has changed! See below.
- The attack routing behavior has changed. It's recommended that you
  lower your attackDistance to 1.5.

Bugs:
- attackAuto_onlyWhenSafe doesn't work.

New features:
- X-Kore works on Windows 98/ME now!
- Properly recognizes advanced seconds classes.
- The console window title now displays useful information.
- Rudimentary Abracadabra support. Set 'noAutoSkill 1' in config.txt,
  then keep using 'ss' command to cast Abracadabra. If it says that you're
  permitted to use Mono Cell, Summon Monster or Class Change, you can then
  activate those skills using 'monocell <#>', 'monster' or 'mvp <#>'.